Updated a use of the collection API