@@ -8,7 +8,6 @@ import org.junit.jupiter.api.Test;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -66,7 +65,7 @@ public class FileToolTest {
         FileTool.writeMinimalJson(newFile, ERROR_TEMPLATE);
 
         List<String> result = Files.readAllLines(newFile);
-        List<String> expected = Collections.singletonList("{}");
+        List<String> expected = List.of("{}");
 
         assertEquals(expected, result);
     }
